fix: Resolve image dimentioning problems
This solves the problem with images not fitting propperly a container, to do that the markup changes from a direct img tag to figute > img.

--- a/css/base.css
+++ b/css/base.css
@@ -128,3 +128,18 @@ dialog::backdrop{
 dialog + .backdrop{
 	background: rgba(0, 0, 0, 0.5);
 }
+
+figure{
+	margin: 0;
+	display: inline-flex;
+	justify-content: center;
+	align-content: flex-start;
+	overflow: hidden;
+}
+
+figure > img{
+	max-width: 100%;
+	max-height: 100%;
+	object-fit: contain;
+	object-position: center top;
+}
