--- a/css/material.css
+++ b/css/material.css
@@ -16,22 +16,14 @@
 .item{
 	width: var(--item-width);
 	height: var(--item-height);
-	display: flex;
-	justify-items: center;
-	align-items: center;
-	flex-direction: column;
+	display: grid;
 	margin: var(--size-m);
 	text-decoration: none;
 }
 
-.item .thumb{
-	max-width: 100%;
-	max-height: calc(100% - calc(var(--size-l) * 5));
-	object-fit: contain;
-}
-
 .item .title{
 	margin: var(--size-xs) 0;
+	align-self: end;
 }
 
 #item-details-content{
@@ -67,14 +59,6 @@
 #item-details-content .image{
 	grid-area: image;
 	text-align: center;
-	max-width: 100%;
-	max-height: 100%;
-	object-fit: contain;
-}
-
-#item-details-content .image img{
-	max-width: 100%;
-	max-height: calc(100% - 5px);
 }
 
 #item-details-content .content{
